Add amount+type fields in messes demands
